Post note on update

--- a/posts/2025-01-10-venetus-a-iiif/index.qmd
+++ b/posts/2025-01-10-venetus-a-iiif/index.qmd
@@ -51,6 +51,12 @@ This is not only convenient:  `iiifmanifest` also validates both the syntax and 
 
 I've added a [`iiif` directory to the HMT project's github archive](https://github.com/homermultitext/hmt-archive/tree/master/iiif) where we will publish IIIF manifests for each of our documented manuscripts. Today we're publishing a manifest for the uniquely important Venetus A manuscript (Marciana 454 = 822). Use [this URL](https://raw.githubusercontent.com/homermultitext/hmt-archive/refs/heads/master/iiif/venetusA.json) with any IIIF viewer that accepts a URL for a IIIF manifest, and you'll be browsing the Venetus A.
 
+
+
 ## Next steps
 
 I plan to add IIIF manifests for the project's other six documented manuscripts to the github repository as they are successfully generated and tested.
+
+::: {.callout-tip}
+See the [README in the github repository's `iiif` directory](https://github.com/homermultitext/hmt-archive/tree/master/iiif) for the current status of this work in progress.
+:::
