--- a/updates/2025-01-17-lexiconmining/index.qmd
+++ b/updates/2025-01-17-lexiconmining/index.qmd
@@ -13,7 +13,13 @@ draft: false # publish by setting to false
 
 ## Release notes: version 0.3.0
 
-- Version `0.3.0` (now available on the main branch of the github repository) is a complete reworking of the previous package. It uses ChatGPT to extract morphological information from Lewis-Short's *Latin Dictionary*, parses the ChatGPT output into an object model, and from those objects  generates data usable with the Tabulae system for building Latin morphological parsers.
+Version `0.3.0` (now available on the main branch of the github repository) is a complete reworking of the previous package. It uses ChatGPT to extract morphological information from Lewis-Short's *Latin Dictionary*, parses the ChatGPT output into an object model, and from those objects  generates data usable with the Tabulae system for building Latin morphological parsers.
+
+State of implementation in version `0.3.0`:
+
+- complete summaries of Lewis-Short from ChatGPT available
+- initial parsing of ChatGPT summaries for nouns, verbs and adjectives implemented
+- generation of Tabulae data for nouns implemented
 
 ::: {.callout-tip title="More information about Tabulae"}
 See [documentation for the `Tabulae.jl` package](https://neelsmith.quarto.pub/tabulae/).
@@ -36,3 +42,7 @@ See [documentation for the `Tabulae.jl` package](https://neelsmith.quarto.pub/ta
 ## Source
 
 - available on [github](https://github.com/neelsmith/LexiconMining.jl)
+
+## Progress
+
+- check [this milestone](https://github.com/neelsmith/LexiconMining.jl/milestone/8) in the github repository to follow progress in implementing generation of Tabulae data sets
