--- a/updates/2025-01-17-lexiconmining/index.qmd
+++ b/updates/2025-01-17-lexiconmining/index.qmd
@@ -5,7 +5,7 @@ description: "Version 0.3.0 of LexiconMining.jl is a ground-up rewrite using Cha
 author:
   - name: Neel Smith
 date: 2025-01-17
-categories: [morphology,LLMs, latin, update] # self-defined categories
+categories: [morphology, lexica, LLMs, latin, update] # self-defined categories
 image: ../newrelease2.png
 draft: false # publish by setting to false
 
