--- a/posts.qmd
+++ b/posts.qmd
@@ -11,6 +11,13 @@ listing:
 ---
 
 
+
+::: {.callout-note title="Announcements of updates"}
+In in addition to these blog posts, I keep announcements of updates to data sets, Julia packages and documentation
+[on this page](./updates.qmd).
+:::
+
+
 :::{.rsstag}
 [<i class="bi bi-rss"></i> RSS feed](https://neelsmith.quarto.pub/posts.xml)
 :::
